# affordable_housing

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-jupyter.txt  requirements.txt
.github/workflows/: ci.yml
affordable_housing/: __init__.py  config.py  dataset.py  features.py  utils.py
affordable_housing/api/: main.py
affordable_housing/modeling/: predict.py  train.py  transform_predict.py
docs/: mkdocs.yml
docs/docs/: index.md
lambda_package/: main.py
lambda_package/affordable_housing/: features.py  plots.py
lambda_package/affordable_housing/modeling/: predict.py  train.py
models/: 3yr-preprocessor.pkl  experiment_results.json  model.pkl  preprocessor.pkl
notebooks/: 1-alex-data-EDA.ipynb  1.1-alex-data-EDA.ipynb  1.2-alex-modeling.ipynb  1.2-alex-prediction.ipynb  1.2-alex-preprocessing.ipynb  1.3-alex-modeling.ipynb  1.4-alex-previousyears.ipynb  1.5-alex-3yr-EDA.ipynb  1.6-alex-preprocessing_modeling.ipynb  EDA.ipynb
reports/: affordable_housing_analysis.pptm
