[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "affordable_housing"
version = "0.0.1"
description = "Analysing afforable housing projects in California with Low-Income Housing Tax Credit (LIHTC)"
authors = [
  { name = "AppraiseAI" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["affordable_housing"]
include = ["pyproject.toml", "affordable_housing/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["affordable_housing"]
force-sort-within-sections = true

